# devops-challenge

./: .env.local  Dockerfile  README.md  docker-compose.yml
py/server/: pyproject.toml
py/server/server/: README.md  app.py  create_db.py  enchantments.db
