[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Javin Lacson <javin@teamengine.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask-restful = "^0.3.9"
flask-cors = "^3.0.10"
aniso8601 = "^9.0.1"
click = "^8.1.3"
gunicorn = "^20.1.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
pytz = "^2022.7.1"
sqlalchemy = "^2.0.0"
werkzeug = "^2.2.2"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
